Add sendgrid to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ asgiref==3.8.1
 Django==5.1.7
 pillow==11.1.0
 python-decouple==3.8
+python-http-client==3.3.7
+sendgrid==6.11.0
 sqlparse==0.5.3
+starkbank-ecdsa==2.2.0
 tzdata==2025.2
